@startuml

title __UTILS's Class Diagram__\n

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class BackPressCloseHandler {
            - backKeyClickTime : long
            - activity : Activity
            + BackPressCloseHandler()
            + onBackPressed()
            + showToast()
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class JogboAdapter {
            - mDataset : ArrayList<JogboData>
            + JogboAdapter()
            + onCreateViewHolder()
            + onBindViewHolder()
            + getItemCount()
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class ViewHolder {
            + mImageView : ImageView
            + mTextView : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class MusicPlayer {
            {static} - instance : MusicPlayer
            {static} - mp : MediaPlayer
            - soundPool : SoundPool
            - die : int
            - half : int
            - check : int
            - call : int
            {static} + getInstance()
            + MusicPlayer()
            + halfsound()
            + callsound()
            + diesound()
            + checksound()
            + MusicTurnOff()
            + MusicTurnOn()
        }
      }
    }
  }
  

  package com.example.shutda {
    package com.example.shutda.view {
      package com.example.shutda.view.utils {
        class RankAdapter {
            - inflater : LayoutInflater
            - Userlist : ArrayList<UserForRank>
            - layout : int
            + RankAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  JogboAdapter -up-|> Adapter
  JogboAdapter +-down- ViewHolder
  ViewHolder -up-|> ViewHolder
  RankAdapter -up-|> BaseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
